Update docs for Albums and Users controller
