# src/albums/albums.controller.ts
@@ -15,7 +15,14 @@ import { CreateAlbumDto } from './dto/create-album.dto';
 import { UpdateAlbumDto } from './dto/update-album.dto';
 import { AlbumsService } from './services/albums.service';
 import { ErrorsMessages } from '../_core/constants';
-import { ApiTags } from '@nestjs/swagger';
+import {
+  ApiBadRequestResponse,
+  ApiCreatedResponse,
+  ApiForbiddenResponse,
+  ApiNotFoundResponse,
+  ApiOkResponse,
+  ApiTags,
+} from '@nestjs/swagger';
 import { FavoritesService } from '../favorites/services/favorites.service';
 
 @ApiTags('Albums')
@@ -25,13 +32,30 @@ export class AlbumsController {
     private readonly albumsService: AlbumsService,
     private readonly favoritesService: FavoritesService,
   ) {}
+
   @Get()
   @HttpCode(200)
+  @ApiOkResponse({
+    type: AlbumsSchema,
+    description: 'Albums records returns successfully',
+    isArray: true,
+  })
   async all(): Promise<AlbumsSchema[]> {
     return this.albumsService.getAll();
   }
+
   @Get(':id')
   @HttpCode(200)
+  @ApiOkResponse({
+    type: AlbumsSchema,
+    description: 'Album record returns successfully',
+  })
+  @ApiBadRequestResponse({
+    description: 'Incorrect input',
+  })
+  @ApiNotFoundResponse({
+    description: "Album don't exist",
+  })
   async getById(@Param('id') id: string): Promise<AlbumsSchema> {
     try {
       return this.albumsService.getById(id);
@@ -50,8 +74,13 @@ export class AlbumsController {
       }
     }
   }
+
   @Post()
   @HttpCode(201)
+  @ApiCreatedResponse({
+    description: 'The record has been successfully created.',
+    type: AlbumsSchema,
+  })
   async create(@Body() createAlbumDto: CreateAlbumDto): Promise<AlbumsSchema> {
     try {
       return this.albumsService.createAlbum(createAlbumDto);
@@ -59,8 +88,22 @@ export class AlbumsController {
       console.error(error.message);
     }
   }
+
   @Put(':id')
   @HttpCode(200)
+  @ApiOkResponse({
+    type: AlbumsSchema,
+    description: 'Album record updates successfully',
+  })
+  @ApiNotFoundResponse({
+    description: "Album don't exist",
+  })
+  @ApiBadRequestResponse({
+    description: 'Not valid UUID',
+  })
+  @ApiForbiddenResponse({
+    description: 'Incorrect password',
+  })
   async update(
     @Param('id') id: string,
     @Body() updateAlbumDto: UpdateAlbumDto,
@@ -82,8 +125,18 @@ export class AlbumsController {
       }
     }
   }
+
   @Delete(':id')
   @HttpCode(204)
+  @ApiNotFoundResponse({
+    description: 'Album deletes successfully',
+  })
+  @ApiBadRequestResponse({
+    description: 'Not valid UUID',
+  })
+  @ApiNotFoundResponse({
+    description: "Album don't exist",
+  })
   async remove(@Param('id') id: string): Promise<AlbumsSchema> {
     try {
       this.favoritesService.deleteAlbum(id);
