# src/users/dto/update-password.dto.ts
@@ -2,10 +2,16 @@ import { IsString } from 'class-validator';
 import { ApiProperty } from '@nestjs/swagger';
 
 export class UpdatePasswordDto {
-  @ApiProperty()
+  @ApiProperty({
+    description: 'Previous password',
+    example: 'qwerty',
+  })
   @IsString()
-  oldPassword: string; // previous password
-  @ApiProperty()
+  oldPassword: string;
+  @ApiProperty({
+    description: 'New password',
+    example: '12345',
+  })
   @IsString()
-  newPassword: string; // new password
+  newPassword: string;
 }
